--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -8,22 +8,32 @@
 
 		<h1>Adicionar notícia</h1>
 		</br>
-		
+
+		<% if(validacao){ %>
+			<ul>
+				<% for(var i = 0; i < validacao.length; i++){ %>
+					<li>
+						<%= validacao[i].msg %>
+					</li>
+				<% } %>
+			</ul>
+		<% } %>
+
 		<form action="/noticias/salvar" method="POST">  
 			<label>Título</label>
-			<input type="text" id="titulo" name="titulo" placeholder="Titulo da notícia"/>
+			<input type="text" id="titulo" name="titulo" value="<%=noticia.titulo%>" placeholder="Titulo da notícia"/>
 			</br>
 			<label>Resumo</label>	
-			<input type="text" id="resumo" name="resumo" placeholder="Resumo da notícia"/>
+			<input type="text" id="resumo" name="resumo" value="<%=noticia.resumo%>" placeholder="Resumo da notícia"/>
 			</br>
 			<label>Nome autor</label>
-			<input type="text" id="autor" name="autor" placeholder="Autor da notícia"/>
+			<input type="text" id="autor" name="autor" value="<%=noticia.autor%>" placeholder="Autor da notícia"/>
 			</br>
 			<label>Data dos fatos</label>
-			<input type="date" id="data_noticia" name="data_noticia" placeholder="Data da notícia"/>
+			<input type="date" id="data_noticia" name="data_noticia" value="<%=noticia.data_noticia%>"placeholder="Data da notícia"/>
 			</br>
 			<label>Notícias</label>
-			<textarea id="noticia" name="noticia" rows="5" cols="30"></textarea>
+			<textarea id="noticia" name="noticia" rows="5" cols="30"><%=noticia.noticia%></textarea>
 			</br>
 			<input type="submit" value="Enviar" />
 		</form>
