--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -15,7 +15,7 @@
 		<link href="css/style.css" rel="stylesheet">
 
 		<!-- favicon -->
-		<link rel="shortcut icon" href="images/favicon.ico" />
+		<link rel="shortcut icon" href="/images/favicon.ico" />
 	</head>
 
 	<body>
@@ -30,34 +30,37 @@
 						<span class="icon-bar"></span>
 					</button>
 					
-					<img src="images/logo.png" />
+					<img src="/images/logo.png" />
 				</div>
 
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index.html">HOME</a></li>
+						<li><a href="/">HOME</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 
 
-	    <div class="container">
+		<div class="container">
 		
-			<div class="row">
-				<div class="col-md-12">
-					<div class="alert alert-danger">
-						<strong>Atenção!</strong>
-						<ul>
-							<li>Título é obrigatório</li>
-							<li>Resumo é obrigatório</li>
-						</ul>
+				<% if(validacao.length > 0){ %>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="alert alert-danger">
+								<strong>Atenção!</strong>
+								<ul>
+									<% for(var i = 0; i < validacao.length; i++){ %>
+										<li><%= validacao[i].msg %></li>
+									<% } %>
+								</ul>
+							</div>
+						</div>
 					</div>
-				</div>
-			</div>
+			<% } %>	
 	    	<div class="row">
 	    		<div class="col-md-12">
-	    			<form>
+	    			<form action="/noticias/salvar" method="POST">
 						<div class="form-group">
 							<label for="titulo">Título:</label>
 							<input type="text" class="form-control" id="titulo" name="titulo">
